# NetScope

./: CMakeLists.txt  CMakePresets.json  README.md
app/netscope/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/application/: CMakeLists.txt  NetscopeApplication.cpp  NetscopeApplication.h
src/core/: CMakeLists.txt  Config.h
src/core/event/: DomainEventBus.h  EventBus.cpp  EventBus.h  EventQueue.h  IEventSubscriber.h
src/core/format/: ByteFormatter.cpp  ByteFormatter.h
src/core/hash/: HashUtils.h
src/core/logger/: Logger.cpp  Logger.h
src/core/threading/: Thread.cpp  Thread.h
src/core/time/: TimeUtils.h
src/core/timer/: TimeTypes.h  Timer.cpp  Timer.h
src/core/utilities/: Expected.h
src/flow/: CMakeLists.txt  FlowHash.h
src/flow/manager/: FlowManager.cpp  FlowManager.h
src/flow/model/: Endpoint.cpp  Endpoint.h  Flow.cpp  Flow.h  FlowKey.cpp  FlowKey.h  FlowStatistics.h  FlowView.h  IPAddress.cpp  IPAddress.h  ProcessView.h  Protocol.h
src/flow/storage/: FlowTable.cpp  FlowTable.h
src/packet_capture/: CMakeLists.txt
src/packet_capture/bpf/: CMakeLists.txt  packet_event.h  packet_monitor.bpf.c
src/packet_capture/dispatcher/: INetworkEventProcessor.h  PacketDispatcher.cpp
src/packet_capture/loader/: BpfLoader.cpp  BpfLoader.h
src/packet_capture/runtime/: CaptureRuntime.cpp  CaptureRuntime.h
src/packet_capture/service/: FlowReporter.cpp  PacketCaptureService.cpp  PacketCaptureService.h  StatisticsReporter.cpp  StatisticsReporter.h
src/packet_capture/shared/: Direction.h  NetworkEvent.h  PacketEvent.h
src/packet_capture/statistics/: NetworkAggregator.cpp  NetworkAggregator.h  NetworkStatistics.h  StatisticsAggregator.cpp  StatisticsAggregator.h
src/presentation/: CMakeLists.txt
src/presentation/aggregation/: ProcessAggregator.cpp  ProcessAggregator.h
src/presentation/console/: FlowReporter.cpp  FlowReporter.h  ProcessReporter.cpp  ProcessReporter.h
src/process/: CMakeLists.txt  CachedProcess.h  ConnectionInfo.h  ConnectionTable.cpp  ConnectionTable.h  ProcessCache.cpp  ProcessCache.h  ProcessInfo.h  ProcessManager.cpp  ProcessManager.h  SocketInfo.h  SocketResolver.cpp  SocketResolver.h
src/processing/: CMakeLists.txt
src/processing/activity/: FlowUpdatedEvent.h
src/processing/aggregation/: ProcessAggregator.cpp  ProcessAggregator.h
src/processing/dispatcher/: PacketDispatcher.cpp  PacketDispatcher.h
src/processing/processor/: FlowProcessor.cpp  FlowProcessor.h
src/storage/: CMakeLists.txt
src/storage/database/: DatabaseResult.h  IDatabase.h  SQLiteDatabase.cpp  SQLiteDatabase.h  Statement.cpp  Statement.h
src/storage/persistence/: PersistenceService.cpp  PersistenceService.h
src/storage/repository/: FlowRepository.cpp  FlowRepository.h  IFlowRepository.h  IProcessRepository.h  ProcessRepository.cpp  ProcessRepository.h
src/storage/schema/: SchemaManager.cpp  SchemaManager.h
tests/: CMakeLists.txt  SQLiteDatabaseTest.cpp
